--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
-[package]
-name = "monkey"
-version = "0.0.0"
-authors = ["Joe Corcoran <joe@corcoran.io>"]
-
-[dependencies]
-unicode-segmentation = "1.1.0"
-rustyline = "1.0.0"
+[workspace]
+members = [
+	"./",
+	"./monkey-core",
+	"./monkey-cli"
+]
